# speice.io-md_shootout

./: .gitignore  Cargo.toml  README.md  build.rs  fetch_marketdata.py
schemas/: marketdata.proto
src/: main.rs  marketdata_capnp.rs  marketdata_generated.rs  marketdata_proto.rs  marketdata_sbe.rs  proto_runner.rs
