[package]
name = "md_shootout"
version = "0.1.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
capnp = "0.10.1"
clap = "2.33.0"
flatbuffers = "0.6.0"
hdrhistogram = "6.3.4"
nom = "5.0.0"
smallvec = "0.6.10"
prost = "0.5.0"
bytes = "0.4.12"
prost-build = "0.5.0"

[dev-dependencies]
alloc_counter = "0.0.2"

[build-dependencies]
capnpc = "0.10"
flatc-rust = "0.1.2"
prost-build = "0.5.0"

